User Login implemented. closes #5

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #with parameters send to the queries
 logging.level.org.hibernate.type=trace
+
+tokenSecret=n3v3r4g32ta1m0n3
